# mdfmt

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: find_md_files.rs  lib.rs  main.rs  process_md.rs
tests/: test_example.md
