[package]
name = "mdfmt"
version = "1.0.0"
edition = "2024"
description = "Fast, lightweight Markdown formatter that removes extra blank lines and handles empty files/frontmatter."
readme = "README.md"
license = "MIT"
repository = "https://github.com/vew94/mdfmt"
homepage = "https://github.com/vew94/mdfmt"
documentation = "https://docs.rs/mdfmt"
rust-version = "1.85"
keywords = ["markdown", "formatter", "cli", "mdfmt", "frontmatter"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "mdfmt"
path = "src/main.rs"

[lib]
name = "mdfmt"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
glob = "0.3"
rayon = "1.8"
